@@ -1,4 +1,10 @@
 2009-12-23  Dustin J. Mitchell <dustin@zmanda.com>
+	* perl/Amanda/Changer/ndmp.pm: set device authentication properties
+	* perl/Makefile.am: actually include ndmp.pm
+	* perl/Amanda/Device.pod: doc extended property_get
+	* man/xml-source/amanda-changers.7.xml: document properties
+
+2009-12-23  Dustin J. Mitchell <dustin@zmanda.com>
 	* common-src/fileheader.c: try to generate parsable headers
 	* perl/Amanda/Header.swg: add default values
 	* server-src/amrestore.pl: fix typo
